# pytorch-template

./: .flake8  config.json  new_project.py  pyproject.toml
src/: parse_config.py  predict.py  train.py
src/base/: base_data_loader.py  base_model.py  base_trainer.py
src/criterions/: __init__.py  loss.py
src/data_loader/: data_loaders.py
src/logger/: __init__.py  logger.py  visualization.py
src/metrics/: __init__.py  metric.py
src/models/: __init__.py
src/trainer/: trainer.py
src/utils/: __init__.py  distributed.py  scripts.py  seed.py  torch.py  util.py
