[tool.poetry]
name = "pytorch-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
torchvision = "^0.5.0"
tensorboard = "^2.2.1"
tqdm = "^4.45.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
